public/style.css
* { box-sizing: border-box; margin: 0; padding: 0; }
body
{
    animation: scrolling 5s linear infinite;
    animation-play-state: running; background-color: #001312;
    height: 100vh;
    overflow: hidden;
    width: 100vw;
}
button { display: inline-block; font-size: 24px; height: 50px; width: 210px; }
td { height: 25px; width: 210px; }
table { margin-left: auto; margin-right: auto; }
#ctrl
{ 
    margin-left: 50vw;
    margin-right: auto;
    margin-top: 23vh;
    position: relative;
    transform: translate(-50%,0);
    text-align: center;
    z-index: 2
}
#canvas { position: absolute; }
#meta
{
    background-color: rgba(255,255,255,.6);
    border-radius: 10px;
    font-family: 'Source Code Pro', monospace;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    text-align: center;
    top: 22%;
    vertical-align: middle;
    width: 50%;
    z-index: 3;
}
#sp { padding: 15px; width: 85%; }
#splabel
{
    background-color:rgba(175,175,175,0.8);
    font-family: 'Source Code Pro', monospace;
    font-size: 24px;
    text-align: center;
}
#linkbkgd
{
    background-color: rgba(175,175,175,0.8);
    bottom: 0px;
    height: 7vh;
    position: fixed;
    width: 100%;
    z-index: 0;
}
#links
{
    bottom: 0px;
    font-family: 'Source Code Pro', monospace;
    padding: 10px;
    position: fixed;
    text-align: center;
    width: 100%;
}
#t1btn { display: none; height: 25%; }
#t2btn { display: none; height: 25%; }
#vis { position: absolute; left: 0; top: 0; z-index: 1; }
.bpm-holder
{
    display: inline-block;
    transform: translate(0,25%);
    vertical-align: middle;
    width: 48%;
}
.dropbtn 
{
    background-color: rgba(125,125,125,1);
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    color: #000000;
    font-family: 'Source Code Pro', monospace;
    font-size: 32px;
    height: 80px;
    padding: 16px;
    width: 100%; 
}
.dropbtn:hover, .dropbtn:focus { background-color: rgba(215,215,215,1); }
.dropdown-content
{
    background-color: #f1f1f1;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    display: none;
    min-width: 160px;
    position: absolute;
    z-index: 4;
}
.dropdown-content p
{
    color: black;
    display: block;
    left: 0;
    padding: 12px 16px;
    right: 0;
    text-align: center;
    text-decoration: none;
}
.dropdown-content p:hover { background-color: #ddd; }
.onoff
{
    background-color: rgba(175,175,175,0.8);
    border-radius: 10px;
    font-family: 'Source Code Pro', monospace;
    text-align: center;
    width: 25%;
}
.onoff div
{
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    background-color: rgba(23,173,73,0.8);
    width: 100%;
}
.show { display: inline-block; }
@keyframes scrolling { from { background-position: 0 0; } to { background-position: 0px -500px;} }

